# py-imdb

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
examples/es-index/: Dockerfile  es-pod-index.yaml  index.py
examples/es-index/es_indices/: imdb-movie-akas.json  imdb-movie-basics.json  imdb-tv-akas.json  imdb-tv-basics.json
pyimdb/: imdb.py
