[tool.poetry]
name = "pyimdb"
version = "0.1.0"
description = ""
authors = ["zwanto <antoine.hamon@protonmail.com>"]
readme = "README.md"
packages = [{include = "pyimdb"}]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
pandas = "^1.5.1"
halo = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
